# deep-mca

./: README.md  pyproject.toml
.github/workflows/: lint.yml
benchmarks/: benchmark_llvm_mca.py
benchmarks/results/: hsw_benchmark_output.csv  ivb_benchmark_output.csv  skl_benchmark_output.csv
configs/: finetune.yaml
notebooks/: convert_pretrain_dataset_to_x86.ipynb
scripts/: check_env.py  check_weights.py  lint.sh  pt_to_safetensor.py  upload_weights.py
src/deep_mca/: __init__.py  data.py  disasm.py  finetune.py  hub.py  model.py  predict.py  tokenizer.py  utils.py
tests/: test_predict.py
